--- a/css/styles.css
+++ b/css/styles.css
@@ -10099,10 +10099,23 @@ section.resume-section {
   padding-right: 1rem;
   padding-top: 5rem;
   padding-bottom: 5rem;
-  max-width: 75rem;
+  /* max-width: 75rem; */
 }
 section.resume-section .resume-section-content {
-  width: 100%;
+  width: 80%;
+}
+
+section.resume-section .stack-images{
+  flex: 1;
+  margin: 0 auto;
+}
+
+.brand-logo{
+  width: 80%;
+  overflow: hidden;
+  display: block;
+  margin: 0 auto;
+  margin-top: 2rem;
 }
 
 @media (min-width: 768px) {
@@ -10116,5 +10129,15 @@ section.resume-section .resume-section-content {
     padding-right: 3rem;
     padding-top: 5rem;
     padding-bottom: 5rem;
+  }
+}
+
+@media (max-width: 600px) {
+  section.resume-section .resume-section-content {
+    width: 100%;
+  }
+  
+  section.resume-section .stack-images{
+    display: hidden;
   }
 }
